corpus/and.txt
===
And
===
If( .MyBoolean && .AnotherBoolean )
{
}
If( .Bool1 && .Bool2 && .Bool3 )
{
}
If( !.Bool1 && .Bool2 && .Bool3 )
{
}
If( ( 1 <= .Int ) && ( .Int <= 10 ) )
{
}
---
(source_file
 (if
  condition: (and
   lhs: (usage (variable (identifier)))
   rhs: (usage (variable (identifier)))
  )
  body: (array)
 )
 (if
  condition: (and
   lhs: (and
    lhs: (usage (variable (identifier)))
    rhs: (usage (variable (identifier)))
   )
   rhs: (usage (variable (identifier)))
  )
  body: (array)
 )
 (if
  condition: (and
   lhs: (and
    lhs: (negate (usage (variable (identifier))))
    rhs: (usage (variable (identifier)))
   )
   rhs: (usage (variable (identifier)))
  )
  body: (array)
 )
 (if
  condition: (and
   lhs: (parenthesis (comparison
    lhs: (decimal)
    rhs: (usage (variable (identifier)))
   ))
   rhs: (parenthesis (comparison
    lhs: (usage (variable (identifier)))
	rhs: (decimal)
   ))
  )
  body: (array)
 )
)
