corpus/array.txt
=====
Array
=====
{ 1 2 3 }
-----
(source_file
 (array
  (decimal)
  (decimal)
  (decimal)
 )
)

============
Nested Array
============
{ { 1 2 3 } 4 5 .a = [ 6 7 8 ] }
------------
(source_file
 (array
  (array
   (decimal)
   (decimal)
   (decimal)
  )
  (decimal)
  (decimal)
  (compound
   reference: (usage (variable (identifier)))
   assign: (struct
    (decimal)
    (decimal)
    (decimal)
   )
  )
 )
)
