corpus/comparison.txt
==========
Comparison
==========
If( .MyBoolean == false )
{
}
If( .StringA == .StringB )
{
}
If( .IntA >= .IntB )
{
}
If( .BoolA != .BoolB )
{
}
----------
(source_file
 (if
  condition: (comparison
   lhs: (usage (variable (identifier)))
   rhs: (boolean)
  )
  body: (array)
 )
 (if
  condition: (comparison
   lhs: (usage (variable (identifier)))
   rhs: (usage (variable (identifier)))
  )
  body: (array)
 )
 (if
  condition: (comparison
   lhs: (usage (variable (identifier)))
   rhs: (usage (variable (identifier)))
  )
  body: (array)
 )
 (if
  condition: (comparison
   lhs: (usage (variable (identifier)))
   rhs: (usage (variable (identifier)))
  )
  body: (array)
 )
)
