corpus/variable.txt
========
Variable
========
.custom = {}
._CURRENT_BFF_DIR_ = {}
."constructed$from$other" = {}
--------
(source_file
 (compound
  reference: (usage (variable (identifier)))
  assign: (array)
 )
 (compound
  reference: (usage (variable (builtin_variable)))
  assign: (array)
 )
 (compound
  reference: (usage (string
   (double_quoted)
   (interpolation (identifier))
   (double_quoted)
  ))
  assign: (array)
 )
)
