test/corpus/comparison.txt
================
compare Equal
================
.IntA == .IntB
----------------
(source_file
 (compare
  left:  (usage variable: (identifier))
  right: (usage variable: (identifier))
 )
)

====================
compare Not Equal
====================
.IntA == .IntB
--------------------
(source_file
 (compare
  left:  (usage variable: (identifier))
  right: (usage variable: (identifier))
 )
)

==================
compare Greater
==================
.IntA > .IntB
------------------
(source_file
 (compare
  left:  (usage variable: (identifier))
  right: (usage variable: (identifier))
 )
)

===============
compare Less
===============
.IntA < .IntB
---------------
(source_file
 (compare
  left:  (usage variable: (identifier))
  right: (usage variable: (identifier))
 )
)
